--- a/playbook-init.yml
+++ b/playbook-init.yml
@@ -49,7 +49,7 @@
         mode: '0440'
 
     - name: MariaDB                    | Prepare MariaDB
-      shell: rm -f /etc/my.cnf.d/auth_gssapi.cnf && /usr/bin/mysql_install_db --user=mysql --basedir=/usr --datadir=/var/lib/mysql
+      shell: rm -f /etc/my.cnf.d/auth_gssapi.cnf && rm -rf /var/lib/mysql/*
 
     - name: MariaDB                    | Add includedir dir
       ansible.builtin.lineinfile:
@@ -68,6 +68,9 @@
       ansible.builtin.file:
         path: /etc/my.cnf.d/page.cnf
         state: absent
+
+    - name: MariaDB                    | Initialize MariaDB
+      shell: /usr/bin/mysql_install_db --user=mysql --basedir=/usr --datadir=/var/lib/mysql
 
     - name: SSM                        | Start services
       shell: ON_SSM_SERVER_SETUP=1 supervisord -c /etc/supervisord.conf &
