Revert "Add prebuilt Prometheus web ui assets"

--- a/playbook-init.yml
+++ b/playbook-init.yml
@@ -127,7 +127,7 @@
         state: absent
 
     - name: SSM                        | Remove OS tools
-      shell: microdnf -y remove python3-pip yum-utils tar
+      shell: microdnf -y remove python3-pip yum-utils
 
     - name: SSM                        | Cleanup yum cache
       shell: microdnf clean all
